syntax = "proto3";

package lobby;

option go_package = "./fancygame";

import "shared.proto";


// GetMemberList
message GetMemberListRes{
    int64 StatusCode = 1;
    string Message = 2;
    MemberListInfo Data = 3;
}

message MemberListInfo{
    repeated MemberList memberList = 1;
}

message MemberList{
    string account = 1;
    string password = 2;
    shared.AvatarEnum avatar = 3;
    shared.GenderEnum gender = 4;
    int64 lastLoginTime = 5;
    int64 lastLogoutTime = 6;
    int64 balance = 7;
}

// SetMember
message SetMember{
    string Account = 1;
    string Password = 2;
    shared.AvatarEnum Gender = 3;
    shared.GenderEnum Avatar = 4;
    int64 Balance = 5;
}

message SetMemberRes{
    int64 StatusCode = 1;
    string Message = 2;
}

// KickOutMember
message KickOutMemberInfo{
    string Account = 1;
    int64 Balance = 2;
}

message KickOutMemberRes{
    int64 StatusCode = 1;
    string Message = 2;
}
